--- a/media-queries.css
+++ b/media-queries.css
@@ -409,11 +409,15 @@
 
 /* @media (max-width: 375px) {
   .project-section {
-    margin-top: 150px;
-    padding: 0 0 48px 0;
-    
+    padding: 5px 0;
+    max-width: var(--max-width);
+    margin: 0 auto; 
   }
-} */
+  
+  .project-sec {
+    padding: 0px 20px;
+  }
+}  */
 
 @media (min-width < 321px) {
   .work-list {
@@ -606,7 +610,7 @@
 
 
   footer p{
-    font-size: 2px;
+    font-size: 12px;
   }
 }
 
